# reddit-cli

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  vercel.json
.claude/agents/: python-test-reviewer.md  typer-expert.md  typer-test-reviewer.md
.claude/skills/python-exception/: SKILL.md
.claude/skills/reddit-cli/: SKILL.md
.claude/skills/test-quality/: SKILL.md
.claude/skills/typer-cli-testing/: SKILL.md  anti-patterns.md  basic-testing.md  callbacks-testing.md  clirunner.md  common-mistakes.md  context-testing.md  coverage.md  exception-testing.md  exit-codes.md  file-operations.md  integration-testing.md  invocation.md  isolated-filesystem.md  mix-stderr.md  mocking.md  output-verification.md  parallel-tests.md  parametrization.md  progressbar-testing.md  prompts-testing.md  pytest-configuration.md  result-object.md  rich-output-testing.md  subcommands-testing.md  template.md  troubleshooting.md
.github/workflows/: mypy.yml  release.yml  ruff.yml  test.yml
.husky/: pre-commit
docs/: CLI.md  PROJECT.md
reddit_cli/: __init__.py  cache.py  errors.py  export.py  logging.py  ui.py  xlsx_export.py
reddit_cli/commands/: _shared.py  browse.py  comments.py  navigation.py  post.py  search.py  subreddit.py
reddit_cli/reddit/: __init__.py  base.py  comments.py  models.py  posts.py  subreddits.py
reports/: PRODUCT_ANALYSIS.md  SENIOR_TECHNICAL_REVIEW.md
reports/tests/: python-test-report-2026-04-02.md  typer-test-report-2026-04-02.md
reports/typer/: architecture-review.md  cli-commands-review.md  code-quality-review.md  error-handling-review.md  executive-summary.md  recommendations.md  remaining-issues.md  security-review.md  testing-review.md
skills/: SKILL.md
skills/reddit-cli/: SKILL.md  post.md
tests/: conftest.py  test_async.py  test_cli_browse.py  test_cli_comments.py  test_cli_errors.py  test_cli_navigation.py  test_cli_ping.py  test_cli_post.py  test_cli_search.py  test_cli_subreddit.py  test_errors.py  test_export.py  test_models.py  test_ping.py  test_posts.py  test_xlsx_export.py
(+55 files in other folders)
