[project]
name = "better-reddit-cli"
version = "0.4.0"
description = "A command-line tool for browsing Reddit without requiring an API key"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["typer", "httpx", "pydantic"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reddit_cli"]

[project.scripts]
reddit = "reddit_cli:app"
